--- a/demo06/package.json
+++ b/demo06/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.1"
   },
-  "nodemonConfig" : { "ignore" : ["models/*.json"] }
+  "nodemonConfig": {
+    "ignore": [
+      "models/*.json"
+    ]
+  }
 }
